# mosaic

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  pyrightconfig.json
.github/workflows/: checks.yml  ci-dev.yml  ci.yml  lint.yml  release.yml
docs/: README.md  getting-started.md
docs/api/: embedding.md  llm.md
docs/examples/: basic-usage.md
docs/guides/: best-practices.md
src/mosaic/: __init__.py
src/mosaic/core/ai/agents/: README.md  base_agent.ipynb  base_agent.py  base_prompt.py  mosaic_agent.py
src/mosaic/core/ai/embedding/: __init__.py  base_embedding.py  factory.py  openai_embedding.py  sentence_transformer_embedding.py
src/mosaic/core/ai/guardrails/: enforcers.py  guardrails.py
src/mosaic/core/ai/hooks/: README.md  error_hooks.py
src/mosaic/core/ai/llm/: base.py  gemini_llm.py  openai_llm.py
src/mosaic/core/common/: logger_mixin.py
src/mosaic/core/common/plugins/: serp_tools.py
src/mosaic/core/common/utils/: __init__.py  pydantic.py
src/mosaic/core/llm/: base.py  gemini_llm.py  openai_llm.py
tests/: test_token_counter.py
