[project]
name = "mosaic"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tarek Sanger", email = "tarek.sanger@me.com" }
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.97.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

# [project.optional-dependencies]
# fastapi = ["fastapi", "uvicorn[standard]"]
# django = ["django"]
# all = ["fastapi", "uvicorn[standard]", "django"]

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.hatch.build]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 200
exclude = [
  ".venv",
  "venv",
  "__pypackages__",
  "build",
  "**/migrations",
  "**/mocks/**",
  "settings.py",
  "__pycache__",
  ".tox",
  "*.pyc",
  ".env",
  "reports",
  "dist",
  "data",
  "*.ipynb"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["C90"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["aucctus"]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
