[project]
name = "mosaic"
version = "0.0.1-alpha.1"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tarek Sanger", email = "tarek.sanger@me.com" }
]
requires-python = ">=3.9"
dependencies = [
    "deepmerge>=2.0",
    "google-genai>=1.20.0",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2.0"]
all = ["sentence-transformers>=2.2.0"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.hatch.build]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 200
exclude = [
  ".venv",
  "venv",
  "__pypackages__",
  "build",
  "**/migrations",
  "**/mocks/**",
  "settings.py",
  "__pycache__",
  ".tox",
  "*.pyc",
  ".env",
  "reports",
  "dist",
  "data",
  "*.ipynb"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["C90"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["aucctus"]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# MyPy configuration
[tool.mypy]
python_version = "3.9"
strict = true  # Enables all recommended type checks
plugins = []

# Optional extras for clarity
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

